--- a/HolyRepoSkills/manifest.json
+++ b/HolyRepoSkills/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "HolyRepoSkills",
-  "version_number": "1.1.3",
+  "version_number": "1.1.5",
   "website_url": "https://github.com/JunyDeveloper/HolyRepoSkills",
-  "description": "Adds skills to Repo",
+  "description": "Adds 3 skills players can select and use",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100"
   ],
